syntax = "proto3";

package pluginapi.v1;

import "pluginapi/v1/dataspec.proto";

message Schema {
    string name = 1;
    string version = 2;
    // Plugin components
    map<string, DataSourceSchema> data_sources = 3;
    map<string, ContentProviderSchema> content_providers = 4;
    map<string, PublisherSchema> publishers = 5;
    string doc = 6;
    repeated string tags = 7;
    // List of node type names that can be rendered by the plugin.
    // All custom nodes that are emitted by the content provider must be in this list.
    repeated string node_renderers = 8;
}

message DataSourceSchema {
    BlockSpec            args   = 3;
    BlockSpec            config = 4;
    string               doc    = 5;
    repeated string      tags   = 6;
}

message ContentProviderSchema {
    BlockSpec args = 4;
    BlockSpec config = 5;
    string doc = 6;
    repeated string tags = 7;
}

message PublisherSchema {
    BlockSpec args = 1;
    BlockSpec config = 2;
    string doc = 3;
    repeated string tags = 4;
}